<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/alarm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="일정의 이름은?"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/select_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="일정의 이름"
            android:maxLines="1"
            android:maxLength="12" />

        <TextView
            android:id="@+id/schedule_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="알림을 추가할 요일은?"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />
        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />
        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />
        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />
        <CheckBox
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/schedule_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="알림의 시간은?"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="2"
                android:layout_weight="1"
                android:textAlignment="center"
                android:hint="0 ~ 23" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="시"
                android:layout_marginEnd="20dp"/>

            <EditText
                android:id="@+id/minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="2"
                android:layout_weight="1"
                android:textAlignment="center"
                android:hint="0 ~ 59" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="분"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_alarm_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_blue"
                android:text="알림 추가" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_red"
                android:text="취소" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>