<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/schedule_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="일정의 이름은?"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/select_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="일정의 이름"
            android:maxLength="12" />

        <TextView
            android:id="@+id/schedule_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="일정을 추가할 요일은?"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />
        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />
        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />
        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />
        <CheckBox
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/schedule_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="시작과 끝 시간?"
            android:textSize="20sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:orientation="horizontal"
            android:rowCount="3"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/timeselect_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9" />

            <CheckBox
                android:id="@+id/timeselect_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10" />

            <CheckBox
                android:id="@+id/timeselect_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11" />

            <CheckBox
                android:id="@+id/timeselect_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12" />

            <CheckBox
                android:id="@+id/timeselect_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <CheckBox
                android:id="@+id/timeselect_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <CheckBox
                android:id="@+id/timeselect_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />

            <CheckBox
                android:id="@+id/timeselect_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />

            <CheckBox
                android:id="@+id/timeselect_17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5" />

            <CheckBox
                android:id="@+id/timeselect_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6" />

            <CheckBox
                android:id="@+id/timeselect_19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7" />

            <CheckBox
                android:id="@+id/timeselect_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8" />

            <CheckBox
                android:id="@+id/timeselect_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_schedule_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_blue"
                android:text="일정 추가" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:background="@drawable/rounded_button_red"
                android:text="취소" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>